crates/kirin-derive-core-2/src/kirin/field/iter/snapshots/kirin_derive_core_2__kirin__field__iter__enum_impl__tests__enum_iterator_impl_to_tokens.snap
---
source: crates/kirin-derive-core-2/src/kirin/field/iter/enum_impl.rs
expression: "prettyplease::unparse(&t)"
---
pub enum MyEnumArgumentsIter<'a> {
    A(std::iter::Chain<std::slice::Iter<'a, SSAValue>, std::iter::Once<&'a SSAValue>>),
    B(std::iter::Chain<std::iter::Once<&'a SSAValue>, std::iter::Once<&'a SSAValue>>),
    C(std::iter::Empty<&'a SSAValue>),
}
impl<'a> Iterator for MyEnumArgumentsIter<'a> {
    type Item = &'a SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::A(inner) => inner.next(),
            Self::B(inner) => inner.next(),
            Self::C(inner) => inner.next(),
        }
    }
}
