crates/kirin-derive-core-2/src/kirin/field/iter/snapshots/kirin_derive_core_2__kirin__field__iter__enum_impl__tests__enum_iterator_type_to_tokens.snap
---
source: crates/kirin-derive-core-2/src/kirin/field/iter/enum_impl.rs
expression: "prettyplease::unparse(&t)"
---
pub enum MyEnumArgumentsIter<T> {
    A(std::iter::Chain<std::slice::Iter<'a, SSAValue>, std::iter::Once<&'a SSAValue>>),
    B(std::iter::Chain<std::iter::Once<&'a SSAValue>, std::iter::Once<&'a SSAValue>>),
}
